Finalized level designer class, added texture capabilities to tiles and reworked scene class.
- Tile classes all have textures
- Level Designer now initializes a map of tile textures
- Image class now supports alpha blending
- Renderer is now passed where needed in scene
- Added new assets filter and folder for engine assets
- Default Images added for tiles and level

--- a/SDLGameEngine.vcxproj
+++ b/SDLGameEngine.vcxproj
@@ -154,6 +154,10 @@
     <ClInclude Include="headers\SpikeTile.h" />
     <ClInclude Include="headers\Tile.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\platforms.png" />
+    <Image Include="assets\spike.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
