--- a/SDLGameEngine.vcxproj
+++ b/SDLGameEngine.vcxproj
@@ -130,11 +130,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\Engine.cpp" />
+    <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Image.cpp" />
     <ClCompile Include="src\LevelDesigner.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\PlatformTile.cpp" />
+    <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\SpawnTile.cpp" />
     <ClCompile Include="src\SpikeTile.cpp" />
@@ -145,10 +149,14 @@
     <None Include="SDL3_image.dll" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="headers\Camera.h" />
+    <ClInclude Include="headers\Enemy.h" />
     <ClInclude Include="headers\Engine.h" />
+    <ClInclude Include="headers\Entity.h" />
     <ClInclude Include="headers\Image.h" />
     <ClInclude Include="headers\LevelDesigner.h" />
     <ClInclude Include="headers\PlatformTile.h" />
+    <ClInclude Include="headers\Player.h" />
     <ClInclude Include="headers\Scene.h" />
     <ClInclude Include="headers\SpawnTile.h" />
     <ClInclude Include="headers\SpikeTile.h" />
