--- a/SDLGameEngine.vcxproj
+++ b/SDLGameEngine.vcxproj
@@ -130,13 +130,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="headers\Collision.cpp" />
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Collision.cpp" />
     <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Image.cpp" />
     <ClCompile Include="src\LevelDesigner.cpp" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\Physics.cpp" />
     <ClCompile Include="src\PlatformTile.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Scene.cpp" />
@@ -150,11 +153,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\Camera.h" />
+    <ClInclude Include="headers\Collision.h" />
     <ClInclude Include="headers\Enemy.h" />
     <ClInclude Include="headers\Engine.h" />
     <ClInclude Include="headers\Entity.h" />
     <ClInclude Include="headers\Image.h" />
     <ClInclude Include="headers\LevelDesigner.h" />
+    <ClInclude Include="headers\Physics.h" />
     <ClInclude Include="headers\PlatformTile.h" />
     <ClInclude Include="headers\Player.h" />
     <ClInclude Include="headers\Scene.h" />
