--- a/SDLGameEngine.vcxproj.filters
+++ b/SDLGameEngine.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\Tile.cpp">
       <Filter>Source Files\Tiles</Filter>
     </ClCompile>
+    <ClCompile Include="src\Audio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="extern\SDL3.dll">
@@ -90,6 +93,9 @@
     </ClInclude>
     <ClInclude Include="headers\PlatformTile.h">
       <Filter>Header Files\Tiles</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\Audio.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
