--- a/SDLGameEngine.vcxproj
+++ b/SDLGameEngine.vcxproj
@@ -130,8 +130,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Audio.cpp" />
     <ClCompile Include="headers\Collision.cpp" />
+    <ClCompile Include="src\Audio.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Collision.cpp" />
     <ClCompile Include="src\Enemy.cpp" />
@@ -153,7 +153,7 @@
     <None Include="SDL3_image.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Audio.h" />
+    <ClInclude Include="headers\Audio.h" />
     <ClInclude Include="headers\Camera.h" />
     <ClInclude Include="headers\Collision.h" />
     <ClInclude Include="headers\Enemy.h" />
